--- a/albion avalon.csproj
+++ b/albion avalon.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>albion_avalon</RootNamespace>
     <UseWPF>true</UseWPF>
 	  <UseWindowsForms>true</UseWindowsForms>
+	  <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
 </Project>
